[gd_scene load_steps=3 format=3 uid="uid://dkld2fwdovoqb"]

[ext_resource type="Script" path="res://src/scenes/menus/settings/settings_menu.gd" id="1_o0lea"]
[ext_resource type="PackedScene" uid="uid://0h0esjkdm67h" path="res://src/scenes/menus/settings/audio_settings.tscn" id="2_by5ij"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_o0lea")

[node name="MainSettings" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -65.5
offset_right = 100.0
offset_bottom = 65.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainSettings"]
layout_mode = 2
text = "Settings
"
horizontal_alignment = 1

[node name="AudioButton" type="Button" parent="MainSettings"]
layout_mode = 2
text = "Audio"

[node name="VideoButton" type="Button" parent="MainSettings"]
layout_mode = 2
text = "Video"

[node name="BackButton" type="Button" parent="MainSettings"]
layout_mode = 2
text = "Back"

[node name="AudioSettings" parent="." instance=ExtResource("2_by5ij")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MainSettings/AudioButton" to="." method="_on_audio_button_pressed"]
[connection signal="pressed" from="MainSettings/VideoButton" to="." method="_on_video_button_pressed"]
[connection signal="pressed" from="MainSettings/BackButton" to="." method="_on_main_back_button_pressed"]
[connection signal="exit_menu" from="AudioSettings" to="." method="_on_audio_settings_exit_menu"]
